CREATE DATABASE IF NOT EXISTS movie_pedia_database DEFAULT CHARSET = utf8mb4;
USE movie_pedia_data_base;

/* Uncomment to reset the database */ 
/*
SET FOREIGN_KEY_CHECKS=0;
DROP TABLE IF EXISTS users;
DROP TABLE IF EXISTS movies;
SET FOREIGN_KEY_CHECKS=1;
*/

CREATE TABLE IF NOT EXISTS users(
	id INT UNIQUE AUTO_INCREMENT,
    email VARCHAR(255) NOT NULL UNIQUE,
    full_name VARCHAR(100) NOT NULL,
    PRIMARY KEY(id)
)ENGINE=InnoDB AUTO_INCREMENT=1;

CREATE TABLE IF NOT EXISTS movies(
	id INT UNIQUE AUTO_INCREMENT,
    title VARCHAR(255) NOT NULL UNIQUE
)ENGINE=InnoDB AUTO_INCREMENT=1;



   