package com.company;

import java.util.ArrayList;

public class Film {
    private ArrayList<String> actors;
    private ArrayList<String> directors;
    private ArrayList<String> genres;
}
